<resources>
    <string name="app_name">SmartHome</string>
    <!-- Strings related to login -->
    <string name="Home">Home</string>
    <string name="prompt_email">Email</string>
    <string name="light">Light</string>
    <string name="temperature">Temperature</string>
    <string name="Electricity">Electricity</string>
    <string name="VideoAudio">Video/Audio</string>
    <string name="Locks">Locks</string>

    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_hello_admin_scrn">HelloAdminScrn</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Fridge">Fridge</string>
    <string name="AC">AC</string>
    <string name="Toaster">Toaster</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>