<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:id="@+id/RL_HomeScreen"
    android:background="@color/milk_white"
    >

 <TextView
     android:id="@+id/TV_home"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="60dp"
     android:gravity="center"
     android:text="@string/Home"
     android:textColor="#454545"
     android:textSize="50dp"
     android:textStyle="italic|bold" />


 <LinearLayout
     android:id="@+id/id_LinL_home"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@id/TV_home"
     android:layout_marginTop="70dp"
     android:orientation="horizontal">

  <ImageButton
      android:id="@+id/IB_Light"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginLeft="20dp"
      android:clickable="true"
      android:src="@drawable/light"
      android:background="@drawable/custom_imagebutton"

      />


  <ImageButton

      android:id="@+id/IB_Temp"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginLeft="35dp"
      android:clickable="true"
      android:src="@drawable/temp"
      android:background="@drawable/custom_imagebutton"


      />

  <ImageButton
      android:id="@+id/IB_Electricity"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginLeft="35dp"
      android:clickable="true"
      android:src="@drawable/electricity"
      android:background="@drawable/custom_imagebutton"


      />

 </LinearLayout>

<LinearLayout
    android:id="@+id/id_LinealLTexts"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/id_LinL_home"
     android:orientation="horizontal"
    >


 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/light"
     android:textSize="25dp"
     android:textColor="@android:color/black"
     android:gravity="center"
     android:layout_marginLeft="35dp"
     />


 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/temperature"
     android:textSize="25dp"
     android:gravity="center"
     android:textColor="@android:color/black"
     android:layout_marginLeft="35dp"
     />

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/Electricity"
     android:textSize="24dp"
     android:gravity="center"
     android:textColor="@android:color/black"
     android:layout_marginLeft="35dp"
     />
</LinearLayout>

  <LinearLayout
      android:id="@+id/id_Linear_Images"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="70dp"
      android:layout_below="@id/id_LinL_home"
      android:orientation="horizontal"
      >

   <ImageButton
       android:id="@+id/IB_Locks"
       android:layout_marginLeft="90dp"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:clickable="true"
       android:src="@drawable/locks"
       android:background="@drawable/custom_imagebutton"

       />
   <ImageButton
       android:id="@+id/IB_VidAud"
       android:layout_marginLeft="35dp"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:clickable="true"
       android:src="@drawable/audio_vid_ic"
       android:background="@drawable/custom_imagebutton"


       />
 </LinearLayout>


 <LinearLayout

     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:layout_below="@id/id_Linear_Images"
     android:orientation="horizontal"
     >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/Locks"
      android:textSize="24dp"
      android:gravity="center"
      android:textColor="@android:color/black"
      android:layout_marginLeft="100dp"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/VideoAudio"
      android:textSize="24dp"
      android:gravity="center"
      android:layout_marginLeft="50dp"
      android:textColor="@android:color/black"
      />

 </LinearLayout>

 <Button
     android:id="@+id/btn_back"
     android:layout_width="75dp"
     android:layout_height="wrap_content"
     android:layout_below="@id/id_Linear_Images"
     android:layout_gravity="left|center"
     android:layout_marginLeft="20dp"
     android:layout_marginTop="150dp"
     android:background="@drawable/button_shape"
     android:backgroundTint="#271F1E"
     android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
     android:textColor="#FFFFFF" />

</RelativeLayout>